Convert to GNU Configure & Build system
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
 .hg
 *~
 *.o
+*.d
+.deps
+.libs
+compile
+config.*
+configure
+depcomp
+install-sh
+missing
+stamp-h1
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache
 xplugd
