Define _POSIX_C_SOURCE=200809L for SA_RESTART on older systems
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 bin_PROGRAMS    = xplugd
 dist_man1_MANS  = xplugd.1
 xplugd_SOURCES  = xplugd.c xplugd.h exec.c input.c randr.c
-xplugd_CFLAGS   = -W -Wall -Wextra -pedantic -std=c99 -D_BSD_SOURCE
+xplugd_CFLAGS   = -W -Wall -Wextra -std=c99
+xplugd_CFLAGS  += -D_POSIX_C_SOURCE=200809L -D_BSD_SOURCE
 xplugd_CFLAGS  += $(X11_CFLAGS) $(Xi_CFLAGS) $(Xrandr_CFLAGS)
 xplugd_LDADD    = $(X11_LIBS) $(Xi_LIBS) $(Xrandr_LIBS)
 
