Travis-CI: Need libxrandr-dev
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ addons:
   apt:
     packages:
       - tree
+      - libxrandr-dev
   coverity_scan:
     project:
       name: "troglobit/xplugd"
