Refactor, rename edid-parse.c --> edid.c
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS    = xplugd
 dist_man1_MANS  = xplugd.1
-xplugd_SOURCES  = xplugd.c xplugd.h exec.c input.c randr.c edid-parse.c edid.h
+xplugd_SOURCES  = xplugd.c xplugd.h exec.c input.c randr.c edid.c edid.h
 xplugd_CFLAGS   = -W -Wall -Wextra -std=c99
 xplugd_CFLAGS  += -D_POSIX_C_SOURCE=200809L -D_BSD_SOURCE -D_DEFAULT_SOURCE
 xplugd_CFLAGS  += $(X11_CFLAGS) $(Xi_CFLAGS) $(Xrandr_CFLAGS)
