--- a/configure.ac
+++ b/configure.ac
@@ -1,10 +1,10 @@
-AC_INIT([xplugd],[1.3],[https://github.com/troglobit/xplugd/issues])
+AC_INIT([xplugd],[1.4-beta1],[https://github.com/troglobit/xplugd/issues])
 AM_INIT_AUTOMAKE([1.11 foreign no-dist-gzip dist-xz])
 AM_SILENT_RULES([yes])
 
-AC_CONFIG_SRCDIR([xplugd.c])
+AC_CONFIG_SRCDIR([src/xplugd.c])
 AC_CONFIG_HEADER([config.h])
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([Makefile man/Makefile src/Makefile])
 
 AC_PROG_CC
 AC_HEADER_STDC
